apps/tobedeployed/production/headless/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headless-http
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: harrytang-prod-headless-http
  hostnames:
    - headless.harrytang.xyz
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headless-https
  namespace: harrytang-prod
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
      sectionName: harrytang-prod-headless-https
  hostnames:
    - headless.harrytang.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headless-srv
          port: 1337
